XMLtoCSV/objects/unpackaged/objects/PCYC_State_License__c.object
<CustomObject>
    <description>Object utilized to verify prescribers with no NPI ID.</description>
    <fields>
        <fullName>PCYC_All_Dea__c</fullName>
        <label>DEA #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Credentials__c</fullName>
        <description>Credentials</description>
        <label>Credentials</label>
        <picklist>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PharmD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPhT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_First_Name__c</fullName>
        <description>First Name</description>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Gender__c</fullName>
        <description>Gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_IMS_ID__c</fullName>
        <description>IMS ID</description>
        <label>IMS ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Last_Name__c</fullName>
        <description>Last Name</description>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_License_Effective_Date__c</fullName>
        <description>License Effective Date</description>
        <label>License Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCYC_License_Expiration_Date__c</fullName>
        <description>License Expiration Date</description>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCYC_License_Type__c</fullName>
        <description>License Type</description>
        <label>License Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Middle__c</fullName>
        <description>Middle Name</description>
        <label>Middle</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_NPI__c</fullName>
        <description>NPI #</description>
        <label>NPI #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Primary_Prof__c</fullName>
        <label>Primary Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Primary_Speciality__c</fullName>
        <description>Primary Speciality</description>
        <label>Primary Speciality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Secondary_Speciality__c</fullName>
        <description>Secondary Speciality</description>
        <label>Secondary Speciality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_State_License__c</fullName>
        <description>State License # for HCP</description>
        <label>State License #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_State__c</fullName>
        <description>License State</description>
        <label>License State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Status__c</fullName>
        <description>Status of HCP</description>
        <label>License Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Suffix__c</fullName>
        <description>Suffix</description>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>State License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PCYC_First_Name__c</columns>
        <columns>PCYC_Last_Name__c</columns>
        <columns>PCYC_Credentials__c</columns>
        <columns>PCYC_State_License__c</columns>
        <columns>PCYC_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SL-{00000}</displayFormat>
        <label>State License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>